Bug 240572 - Icon-overlay for accounts mapped to online accounts wrong
Summary: Icon-overlay for accounts mapped to online accounts wrong
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 11:45 UTC by Thomas Baumgart
Modified: 2010-06-03 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-06-03 11:45:36 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

The overlay used for the account icon in the accounts view when an account is mapped to an online account is wrong. 

Reproducible: Always

Steps to Reproduce:
Create mapped account for OFX or AqBanking. Open accounts (list or icon)-view.

Actual Results:  
A cash stack is used as overlay.

Expected Results:  
A more online connection oriented overlay should be used.
Comment 1 Alvaro Soliverez 2010-06-03 11:56:11 UTC
SVN commit 1134056 by asoliverez:

Use the online banking icon for the account icon overlay.

BUG:240572

 M  +1 -1      mymoneyaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134056