Use the online banking icon for the account icon overlay.

BUG:240572

svn path=/trunk/kdereview/kmymoney/; revision=1134056